@@ -10,6 +10,9 @@ Unreleased changes (0.9-dev)
  3. NUTCH-260 - Update hadoop version to 0.5.0 (Renaud Richardet,
     siren)
 
+ 4. Optionally skip pages with abnormally large values of Crawl-Delay
+    (Dennis Kubes via ab)
+
 Release 0.8 - 2006-07-25
 
  0. Totally new architecture, based on hadoop
